# grid-strategy

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  LICENSE  MANIFEST.in  README.md  azure-pipelines.yml  codecov.yml  pyproject.toml  setup.cfg  tox.ini
docs/: code.rst  conf.py  index.rst  requirements-docs.txt
scripts/: release.py
src/grid_strategy/: __init__.py  _abc.py  strategies.py  strategies.py~HEAD
tests/: test_grids.py  test_strategies.py
