[build-system]
requires = [
    "setuptools>40.6.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
source = ["grid_strategy"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.black]
line-length = 88
py36 = true
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
