[metadata]
name = grid-strategy
version = 0.0.1
author = Grid Strategy Authors
author-email = paul@ganssle.io
summary = A package for organizing matplotlib plots.
description = file: README.md
license = Apache License 2.0
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: Python Software Foundation License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Visualization

[options]
package_dir =
    =src
packages = find:

[options.packages.find]
where=src
