[metadata]
name = grid-strategy
version = 0.0.1
description = A package for organizing matplotlib plots.
author = Grid Strategy Authors
author-email = paul@ganssle.io
url = https://github.com/matplotlib/grid-strategy
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_file = LICENSE
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: Python Software Foundation License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Visualization

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.6
install_requires =
    matplotlib
    numpy

[options.packages.find]
where=src
